[package]
name = "bpf"
version = "0.0.1"
edition = "2024"
description = "An eBPF library"
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
bpf-tracing = { version = "0.0.3", optional = true }

[features]
tracing = ["dep: bpf-tracing"]
